--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-i18n": "^8.27.2",
     "vue-pdf-embed": "^1.1.4",
     "vue-router": "^3.2.0",
+    "vue-simple-alert": "^1.1.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.0.0"
   },
