--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.3",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.53.0",
+    "eslint-plugin-vue": "^9.18.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -41,7 +42,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
